# EasyCRM

./: .gitignore  .pylintrc  README.md  pyproject.toml  requirements.txt  vercel.json
src/: app.py  companies.py  db.py  jinjaUtils.py  routes.py  schema.sql  users.py  validators.py
src/controllers/: authControllers.py  companyControllers.py  userControllers.py
src/middleware/: authMiddlewares.py
src/middlware/: authMiddlewares.py
src/services/: companyServices.py  userServices.py
src/static/: styles.css
src/templates/: 403.html  404.html  405.html  backbutton.html  companies.html  company.html  companycontact.html  contact.html  contacts.html  createuser.html  editcompany.html  edituser.html  error.html  index.html  login.html  passwordtooltip.html  register.html  upsertcompany.html  upsertcontact.html  usermanager.html
